# GTS_Plugin

./: .gitignore  2.0.0-Changelog.txt  2.0.0-PR4Changelog.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  animation_triggers.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  build_2.yml
contrib/Distribution/Config/: GtsInput.toml  GtsPlugin.toml  GtsRuntime.toml
contrib/Distribution/Papyrus/: GtsCamera.pex  GtsControl.pex  GtsEvent.pex  GtsHeight.pex  GtsPlugin.pex  GtsSMConfigMenu.pex  GtsSM_HotKeys.pex  GtsScale.pex
contrib/Distribution/PapyrusSource/: GtsCamera.psc  GtsControl.psc  GtsEvent.psc  GtsHeight.psc  GtsPlugin.psc  GtsSMConfigMenu.psc  GtsSM_HotKeys.psc  GtsScale.psc
contrib/Distribution/esps/: GtsSizeMatters.esp
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
contrib/Distribution/mcm/: config.json  keybinds.json  settings.ini
include/Gts/: Gts.hpp
src/: ActionSettings.hpp  Config.cpp  Config.hpp  Main.cpp  PCH.hpp  events.cpp  events.hpp  node.cpp  node.hpp  profiler.cpp  profiler.hpp  spring.cpp  spring.hpp  timer.cpp  timer.hpp  util.hpp
src/UI/: DebugAPI.cpp  DebugAPI.hpp
src/colliders/: RE.cpp  RE.hpp  actor.cpp  actor.hpp  allraycollector.cpp  allraycollector.hpp  charcontroller.cpp  charcontroller.hpp  common.cpp  common.hpp  ragdoll.cpp  ragdoll.hpp
src/data/: persistent.cpp  persistent.hpp  plugin.cpp  plugin.hpp  runtime.cpp  runtime.hpp  tasks.hpp  time.cpp  time.hpp  transient.cpp  transient.hpp  world.cpp  world.hpp
src/hooks/: Experiments.cpp  Experiments.hpp  Movement.cpp  Movement.hpp  PreventAnimations.cpp  PreventAnimations.hpp  Projectiles.cpp  Projectiles.hpp  Pushback.cpp  Pushback.hpp  RaceMenu.cpp  RaceMenu.hpp  Stealth.cpp  Stealth.hpp  actor.cpp  actor.hpp  actorRotation.cpp  actorRotation.hpp  branchhook.hpp  callhook.hpp  cameraState.cpp  cameraState.hpp  character.cpp  character.hpp  controls.hpp  damage.cpp  damage.hpp  functionhook.cpp  functionhook.hpp  havok.cpp  havok.hpp  headTracking.cpp  headTracking.hpp  hkbBehaviorGraph.cpp  hkbBehaviorGraph.hpp  hooks.cpp  hooks.hpp  impact.cpp  impact.hpp  jump.cpp  (+15 more)
src/hooks/Detours/: creatwth.cpp  detours.cpp  detours.h  detver.h  disasm.cpp  disolx64.cpp  image.cpp  modules.cpp  uimports.cpp
src/magic/: magic.cpp  magic.hpp
src/magic/effects/: EnchGigantism.cpp  EnchGigantism.hpp  GrowthSpurt.cpp  GrowthSpurt.hpp  TinyCalamity.cpp  TinyCalamity.hpp  absorb_effect.cpp  absorb_effect.hpp  common.hpp  grow_other.cpp  grow_other.hpp  growth.cpp  growth.hpp  restore_size.cpp  restore_size.hpp  restore_size_other.cpp  restore_size_other.hpp  shrink.cpp  shrink.hpp  shrink_back.cpp  shrink_back.hpp  shrink_back_other.cpp  shrink_back_other.hpp  shrink_foe.cpp  shrink_foe.hpp  shrink_other.cpp  shrink_other.hpp  slow_grow.cpp  slow_grow.hpp  smallmassivethreat.cpp  smallmassivethreat.hpp  sword_of_size.cpp  sword_of_size.hpp
src/managers/: Attributes.cpp  Attributes.hpp  CrushManager.cpp  CrushManager.hpp  GrabAnimationController.cpp  GrabAnimationController.hpp  GtsManager.cpp  GtsManager.hpp  GtsSizeManager.cpp  GtsSizeManager.hpp  InputManager.cpp  InputManager.hpp  MaxSizeManager.cpp  MaxSizeManager.hpp  OverkillManager.cpp  OverkillManager.hpp  RandomGrowth.cpp  RandomGrowth.hpp  RipClothManager.cpp  RipClothManager.hpp  Rumble.cpp  Rumble.hpp  ShrinkToNothingManager.cpp  ShrinkToNothingManager.hpp  TES.cpp  TES.hpp  ThighSandwichController.cpp  ThighSandwichController.hpp  camera.cpp  camera.hpp  contact.cpp  contact.hpp  explosion.cpp  explosion.hpp  footstep.cpp  footstep.hpp  highheel.cpp  highheel.hpp  hitmanager.cpp  hitmanager.hpp  (+12 more)
src/managers/ai/: ai_Manager.cpp  ai_Manager.hpp  ai_PerformAction.cpp  ai_PerformAction.hpp  ai_SelectAction.cpp  ai_SelectAction.hpp  aifunctions.cpp  aifunctions.hpp  headtracking.cpp  headtracking.hpp
src/managers/animation/: Compat.cpp  (+67 more)
src/papyrus/: camera.cpp  camera.hpp  height.cpp  height.hpp  modevents.cpp  modevents.hpp  papyrus.cpp  papyrus.hpp  plugin.cpp  plugin.hpp  scale.cpp  scale.hpp  totalcontrol.cpp  totalcontrol.hpp
src/rays/: allcollector.cpp  allcollector.hpp  raycast.cpp  raycast.hpp
src/scale/: height.cpp  height.hpp  modscale.cpp  modscale.hpp  scale.cpp  scale.hpp
src/utils/: DeathReport.cpp  DeathReport.hpp  DifficultyUtils.cpp  DifficultyUtils.hpp  DynamicScale.cpp  DynamicScale.hpp  InputFunctions.cpp  InputFunctions.hpp  ItemDistributor.cpp  ItemDistributor.hpp  MovementForce.cpp  MovementForce.hpp  SurvivalMode.cpp  SurvivalMode.hpp  actorUtils.cpp  actorUtils.hpp  av.cpp  av.hpp  camera.cpp  camera.hpp  debug.cpp  debug.hpp  dinput.hpp  findActor.cpp  findActor.hpp  fmt.hpp  looting.cpp  looting.hpp  papyrusUtils.hpp  smooth.cpp  smooth.hpp  sound.cpp  sound.hpp  text.cpp  text.hpp  units.cpp  units.hpp
(+95 files in other folders)
